Revision history for Whelk

{{$NEXT}}
	- Framework now detects typos made in schemas
	- Removed example libraries from the index

0.02 - 2024-07-03
	- Added a TodoApp example
	- Now uses persistent_controllers from Kelp 2.15
	- Documentation fixes

0.01 - 2024-07-03
	- First version
