@@ -1,0 +1,6 @@
+{
+	resources => {
+		'Typo' => '/',
+	},
+}
+
